--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -1,16 +1,24 @@
-version: v1
+version: v2
+
 managed:
   enabled: true
-  go_package_prefix:
-    default: github.com/trancecho/internal-message
-    except:
-      - buf.build/googleapis/googleapis
+  disable:
+    - file_option: go_package
+      module: buf.build/googleapis/googleapis
+  override:
+    - file_option: go_package_prefix
+      value: github.com/betterde/focusly/internal/gen
+
 plugins:
-  - name: go
+  - remote: buf.build/protocolbuffers/go
     out: .
     opt: paths=source_relative
-  - name: go-grpc
+  - remote: buf.build/grpc/go
     out: .
-    opt:
-      - paths=source_relative
-      - require_unimplemented_servers=false
+    opt: paths=source_relative
+  - remote: buf.build/grpc-ecosystem/gateway
+    out: .
+    opt: paths=source_relative
+#  - remote: buf.build/connectrpc/go:v1.12.0
+#    out: internal/gen
+#    opt: paths=source_relative
