--- a/buf.yaml
+++ b/buf.yaml
@@ -1,8 +1,12 @@
-# For details on buf.yaml configuration, visit https://buf.build/docs/configuration/v2/buf-yaml
 version: v2
+
 lint:
   use:
     - STANDARD
+deps:
+  - buf.build/googleapis/googleapis
+modules:
+  - path: .
 breaking:
   use:
     - FILE
